# pesquisa-operacional

./: README.md  pesquisa-operacional.cabal
src/: TableauSimplex.hs
